API Utilitats de Firma V2: Afegir informació d'EvidenciesIB al validar PDFs signats emprant Firma Àgil #17
